  should manually lock out players with 0.2.7 clients, for example by modifying
  CYCLE_ACCEL_RIM a tiny bit.
- "Team Red" bug. If the server allows maximally two teams, no team ever
  gets to be Team Red.
- Phasing made even more difficult; nice side effect of the fix is
  reduced network bandwidth usage.
- Speed gauge resets between rounds.
- More accurate Lag-O-Meter by meriton.

Changes since 0.2.8.1:
- Timestamps and teamscores added to scorelog.txt
- Dedicated server now works on FreeBSD and OpenBSD
- User running the dedicated server is called "armagetronad" again, the
  longer "armagetronad-dedicated" caused problems with BSD
- Test versions refuse to connect to servers more than one version ahead
- Prepared client for respawns
- Team spawn formation is now configurable
- Added reasons to bans
- Added spectator autokicking
- Added history to chat and console (wrtlprnft). Press "Cursor up" to
  edit and repeat previous chats and console commands.
- You only enter a game once your client is synced
- /msg now prefers exact matches over partial matches
- Cycles now have better memory for pending turns (wrtlprnft)
- Added player join/leave/rename messages to ladderlog.txt with IPs
- Ping variance influence on packet loss tolerance code is now clamped
  by the regular, configurable, packet loss tolerance: effect of variance
  can be no bigger than the effect of ping.
- Spectators are now regular players and can chat
- The /msg command now converts the entered pattern into the internal
  name so if you write "/msg öäü" and there is a user named "öäü" with
  an internal nick of "oau" it will still get matched
- Team changes are now only executed when allowed, the need for the
  temporary/permanent team imbalance setting distinction has gone away
- Added brake toggle button
  Bugfixes:
- Client sometimes crashed when leaving a server with AIs on over the menu
- The server starting scripts were chowning /var/run and /var/log to armagetronad