@@ -1474,6 +1474,7 @@ void nServerInfo::GetFromMaster(nServerInfo *masterInfo)
     while(sn_GetNetState() == nCLIENT && timeout > tSysTimeFloat())
     {
         sn_Receive();
+        sn_SendPlanned();
         tAdvanceFrame(100000);
         st_DoToDo();
         if (sn_ServerCount > lastReported + 9)
@@ -1530,6 +1531,7 @@ void nServerInfo::GetFromLAN(unsigned int pollBeginPort, unsigned int pollEndPor
     {
         tAdvanceFrame();
         sn_Receive();
+        sn_SendPlanned();
         tAdvanceFrame(10000);
         if (sn_ServerCount > lastReported)
         {
@@ -1658,12 +1660,14 @@ void nServerInfo::TellMasterAboutMe(nServerInfo *masterInfo)
     con << tOutput("$network_master_send");
     m->BroadCast();
     sn_Receive();
+    sn_SendPlanned();
 
     // wait for the data to be accepted
     nTimeRolling timeout = tSysTimeFloat() + 20;
     while(sn_GetNetState() == nCLIENT && timeout > tSysTimeFloat() && sn_Connections[0].ackPending > 0)
     {
         sn_Receive();
+        sn_SendPlanned();
         tAdvanceFrame(10000);
     }
 
@@ -1975,6 +1979,7 @@ bool nServerInfo::DoQueryAll(int simultaneous)         // continue querying the 
     }
 
     sn_Receive();
+    sn_SendPlanned();
 
     if (sn_Requesting)
         return true;
@@ -2138,6 +2143,7 @@ void nServerInfo::RunMaster()
     }
 
     sn_Receive();
+    sn_SendPlanned();
 }
 
 bool nServerInfo::Reachable() const
